# RtMidiWrapper

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
include/RtMidiW/: RtMidiW.hpp
tests/: CMakeLists.txt  tests.cpp
